--- a/Nie chwal dnia przed zachodem slonca.csproj
+++ b/Nie chwal dnia przed zachodem slonca.csproj
@@ -55,8 +55,14 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scripts\Camera.cs" />
+    <Compile Include="scripts\Enemy.cs" />
+    <Compile Include="scripts\EnemyMelee.cs" />
     <Compile Include="scripts\MovingPlatform.cs" />
     <Compile Include="scripts\Player.cs" />
+    <Compile Include="scripts\LevelManager.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="scenes\levels\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
