--- a/Nie chwal dnia przed zachodem slonca.csproj
+++ b/Nie chwal dnia przed zachodem slonca.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scenes\Menus\BackgroundParallax.cs" />
     <Compile Include="scenes\Menus\MainMenu.cs" />
+    <Compile Include="scenes\Menus\ProverbDisplay.cs" />
     <Compile Include="utils\FpsCounter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
