--- a/Nie chwal dnia przed zachodem slonca.csproj
+++ b/Nie chwal dnia przed zachodem slonca.csproj
@@ -53,12 +53,12 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="scenes\Menus\BackgroundParallax.cs" />
-    <Compile Include="scenes\Menus\MainMenu.cs" />
-    <Compile Include="scenes\Menus\ProverbDisplay.cs" />
-    <Compile Include="utils\FpsCounter.cs" />
+    <Compile Include="scripts\ProverbDisplay.cs" />
+    <Compile Include="scripts\BackgroundParallax.cs" />
+    <Compile Include="scripts\MainMenu.cs" />
+    <Compile Include="scripts\FpsCounter.cs" />
+    <Compile Include="scripts\Player.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
