--- a/Nie chwal dnia przed zachodem slonca.csproj
+++ b/Nie chwal dnia przed zachodem slonca.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="scripts\Ball.cs" />
     <Compile Include="scripts\Camera.cs" />
     <Compile Include="scripts\Enemy.cs" />
     <Compile Include="scripts\EnemyMelee.cs" />
