Next Wave only after all enemies are dead

--- a/Nie chwal dnia przed zachodem slonca.csproj
+++ b/Nie chwal dnia przed zachodem slonca.csproj
@@ -67,7 +67,7 @@
     <Compile Include="scripts\BackgroundParallax.cs" />
     <Compile Include="scripts\MainMenu.cs" />
     <Compile Include="scripts\FpsCounter.cs" />
-    <Compile Include="scripts\GameManager.cs" /
+    <Compile Include="scripts\GameManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="scenes\levels\" />
